@@ -1,3 +1,19 @@
+/*
+ * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License").
+ * You may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package com.amazon.aws.partners.saasfactory.saasboost.dal.ddb;
 
 import com.amazon.aws.partners.saasfactory.saasboost.model.Tier;
@@ -6,18 +22,19 @@ import org.slf4j.LoggerFactory;
 import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 public class DynamoTier {
     private static final Logger LOGGER = LoggerFactory.getLogger(DynamoTier.class);
-    private static final TierAttribute PRIMARY_KEY = TierAttribute.id;
+    private static final DynamoTierAttribute PRIMARY_KEY = DynamoTierAttribute.id;
     public final Map<String, AttributeValue> attributes;
 
     private DynamoTier(Tier tier) {
         attributes = new HashMap<>();
-        for (TierAttribute tierAttribute : TierAttribute.values()) {
+        for (DynamoTierAttribute tierAttribute : DynamoTierAttribute.values()) {
             attributes.put(tierAttribute.name(), tierAttribute.fromTier(tier));
         }
         LOGGER.debug("Created DynamoTier: {}", attributes);
@@ -61,16 +78,16 @@ public class DynamoTier {
     }
 
     public Map<String, AttributeValue> primaryKey() {
-        return Map.of(PRIMARY_KEY.name(), attributes.get(PRIMARY_KEY.name()));
+        return Collections.singletonMap(PRIMARY_KEY.name(), attributes.get(PRIMARY_KEY.name()));
     }
 
     public static Map<String, AttributeValue> primaryKey(String id) {
-        return Map.of(PRIMARY_KEY.name(), AttributeValue.builder().s(id).build());
+        return Collections.singletonMap(PRIMARY_KEY.name(), AttributeValue.builder().s(id).build());
     }
 
     public static Tier fromAttributes(Map<String, AttributeValue> attributes) {
         Tier.Builder tierBuilderInProgress = Tier.builder();
-        for (TierAttribute tierAttribute : TierAttribute.values()) {
+        for (DynamoTierAttribute tierAttribute : DynamoTierAttribute.values()) {
             tierAttribute.toTier(tierBuilderInProgress, attributes.get(tierAttribute.name()));
         }
         return tierBuilderInProgress.build();
